# crypto_bot

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: schemas.py  types.py
app/services/: depth.py  lifespan.py
app/services/connection/: __init__.py  base.py  database.py  http.py
app/services/exchange/: base.py  binance.py
app/services/repository/: base.py  depth.py
data/: 2025-03-19T19.msgpack
src/: __main__.py  main.py  reader.py
src/commands/: __init__.py  db_writer.py  load_data.py  reader.py
src/core/: commands.py  enums.py  lifespan.py  logging.py  schemas.py  settings.py  types.py  utils.py
src/core/connection/: database.py
src/core/database/: models.py
src/schemas/: load_data.py
src/services/: depth.py
src/services/exchange/: base.py  binance.py
src/services/load_data/: __init__.py  loader.py  writer.py
src/services/load_data/exchange/: __init__.py  base.py  binance.py
src/services/loader/: schemas.py  service.py  types.py
src/services/loader/exchange/: base.py  binance.py
src/services/repository/: base.py  depth.py
src/services/writer/: file_writer.py  service.py
