[project]
name = "crypto-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]>=3.11.2",
    "asyncpg>=0.30.0",
    "msgspec[yaml]>=0.18.6",
    "python-dotenv>=1.0.1",
    "sqlalchemy[asyncio]>=2.0.36",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.4",
]


[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["ANN401", "D"]
extend-exclude = ["local"]

[tool.mypy]
exclude = ["local"]