[project]
name = "crypto-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]>=3.11.14",
    "msgpack>=1.1.0",
    "msgspec[yaml]>=0.19.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.0",
]


[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["ANN401", "D", "TRY400"]
extend-exclude = ["local"]

[tool.mypy]
exclude = ["local"]
